	within load.
	* src/GenericFilters.py (get_filters): Use default value of
	'generic' for the namespace argument; Remove unneeded import.
	* src/GrampsDb/_ConstXML.py: Add new file.
	* src/GrampsDb/Makefile.am: Ship new file.
	* src/GrampsDb/_GrampsBSDDB.py: Convert family and parent family
	relations from integer to tuple on upgrade.
	* src/GrampsDb/_WriteGedcom.py: Convert from tuple to string.

2006-01-25  Don Allingham  <don@gramps-project.org>
	* src/DisplayTabs.py: use idle_loop to load data for source
	backreferences
	* src/EditSource.py: close the BackReferences tab to turn off the
	idle loop if still active
	* src/GrampsDb/_GrampsBSDDB.py: close secondary indexes before primary
	
2006-01-24  Don Allingham  <don@gramps-project.org>
	* src/DisplayTabs.py: SourceRef tab
	* src/EditSource.py: New source ref dialog
	* src/grampsl.glade: New source ref dialog
	* src/GrampsDb/_GedTokens.py: repository tokens
	* src/GrampsDb/_ReadGedcom.py: repository support

2006-01-24  Alex Roitman  <shura@gramps-project.org>
	* src/GrampsDb/_GrampsBSDDB.py (load): Set max locks and objects
	to 25000; Add DB_RECOVER flag to the environment.

2006-01-24  Don Allingham  <don@gramps-project.org>
	* src/DisplayModels.py: Fix column handling for repositories
	* src/RepositoryView.py: Columns for repositories
	* src/GrampsDb/_GrampsDbBase.py: default columns settings for repositories
	* src/GrampsDb/_ReadGedcom.py: Import repository information
	* src/RelLib/_Event.py: check Event type values

2006-01-23  Don Allingham  <don@gramps-project.org>
	* src/DisplayTabs.py: Add source ref model/tab
	* src/PeopleModel.py: specify handle column
	* src/PersonView.py: fix selection column
	* src/DisplayState.py: Warning log handler, add timeout handler
	* src/EditFamily.py: remove icon in father/mother column, add source tab
	* src/EditPerson.py: remove commented out code
	* src/GrampsWidgets.py: add WarnButton
	* src/ViewManager.py: use WarnButton in the status bar